# custom-ring-gesture

./: .gitignore  README.md  custom_backend.py  data.pkl  export.py  main.py  pyproject.toml  run_evaluate.py  train_log.txt  vae.py
config/: batch1024.yaml  batch16.yaml  batch2048.yaml  batch256.yaml  batch32.yaml  batch512.yaml  batch64.yaml  depth1.yaml  depth2.yaml  depth3.yaml  fp16.yaml  fp32.yaml  lr1e-2.yaml  lr1e-5.yaml  lr2e-3.yaml  lr2e-4.yaml  lr4e-3.yaml  lr5e-4.yaml  morefc.yaml  test.yaml
config/experiment/: 50_samples.yaml  baseline.yaml  baseline_50_samples.yaml  baseline_all_samples.yaml  baseline_with_samples.yaml  directly_train.yaml  pretrained.yaml  pretrained_morefc.yaml  pretrained_senselitev2.yaml
config/vae/: generate.yaml  train_delta.yaml  train_vae.yaml
dataset/: dataset.py  exp_baseline_dataset.py  exp_baseline_with_samples_dataset.py  exp_directly_train_dataset.py  gesture_augmentor.py  gesture_dataset.py  pair_dataset.py
evaluate/: evaluate.py
experiment/: baseline.py  baseline_with_samples.py  directly_train.py
model/: __init__.py  model.py  sense_lite_v2.py  vae.py
train/: train.py
utils/: check.py  config.py  export.py  to_utils.py  train_utils.py
visual/: vis.py
