[project]
name = "custom-ring-gesture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.1",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.9.0",
]
